added initial implementation of ConfigKey.Builder